# ai-gateway

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DECISIONS.md  FAILURES.md  GLOSSARY.md  PROGRESS.md  README.md  SETUP.md  SLICE3_PRD.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: python-architecture-reviewer.md
.claude/skills/pgvector-psycopg/: SKILL.md
.github/workflows/: ci.yml
db/: init.sql
evals/: dataset.py  run_eval.py  verify_live.py
src/eshop/: __init__.py  app.py  cli.py  gateway_client.py  store.py  tools.py
src/gateway/: __init__.py  __main__.py  config.py  main.py
src/gateway/adapters/: embeddings.py  intent_repository.py  repository.py  verifier.py
src/gateway/adapters/backends/: echo.py  openai_compat.py
src/gateway/api/: routes.py  schemas.py
src/gateway/domain/: errors.py  models.py  ports.py
src/gateway/services/: cache_service.py  classifier.py  intent_extractor.py  intent_gate.py  pipeline.py  prune_timer.py  router.py
tests/: conftest.py  test_backend_live.py  test_backend_openai_compat.py  test_cache_integration.py  test_cache_service.py  test_chat_api.py  test_eshop_app.py  test_eval.py  test_health.py  test_intent_gate.py  test_intent_prune_integration.py  test_live_eshop.py  test_pipeline.py  test_ports.py  test_prune_timer.py
