[project]
name = "gateway"
version = "0.1.0"
description = "A Python LLM gateway: semantic caching + intelligent serving."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "anyio",
    "pydantic",
    "pydantic-settings",
    "psycopg[binary,pool]",
    "pgvector",
    "fastembed",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]

# --- Quality gates (non-negotiable: ruff, mypy --strict, pytest must pass) ---

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear,
# ASYNC flake8-async (catches sync-I/O-on-async-path smells this project cares about).
select = ["E", "W", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
files = ["src", "tests"]

# Libraries without bundled type information; psycopg ships its own types.
[[tool.mypy.overrides]]
module = ["fastembed.*", "pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: touches a real Postgres+pgvector DB; skipped when none is reachable",
]
